namespace java ru.nkz.ivcgzo.thriftPbol

include "../../../common/thrift/kmiacServer.thrift"

service ThriftPbol extends kmiacServer.KmiacServer {
}
